adding isValidDate and isValueValid methods

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -2,7 +2,7 @@ CC = c++
 CFLAGS = -Wall -Werror -Wextra -std=c++17
 
 NAME = main
-SRC = main.cpp easyfind.cpp
+SRC = main.cpp BitcoinExchange.cpp
 OBJ_DIR = bin
 OBJ = $(SRC:%.cpp=$(OBJ_DIR)/%.o)
 
