fixing ex00, before error throw when commpared with give data from .pdf

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,7 +1,7 @@
 CC = c++
 CFLAGS = -Wall -Werror -Wextra -std=c++17
 
-NAME = main
+NAME = btc
 SRC = main.cpp BitcoinExchange.cpp
 OBJ_DIR = bin
 OBJ = $(SRC:%.cpp=$(OBJ_DIR)/%.o)
