spliting parsing from evaluate, using variant for distinction between token and int

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,7 +1,7 @@
 CC = c++
 CFLAGS = -Wall -Werror -Wextra -std=c++17
 
-NAME = main
+NAME = RPN
 SRC = main.cpp RPN.cpp
 OBJ_DIR = bin
 OBJ = $(SRC:%.cpp=$(OBJ_DIR)/%.o)
